fixed problem with tree on IE

--- a/webroot/css/plugins/crossbrowser.css
+++ b/webroot/css/plugins/crossbrowser.css
@@ -37,7 +37,7 @@
 	left:730px;
 }
 #crossbrowser li {
-	background: url(/images/crossbrowser/browsers.gif) -62px 0 no-repeat;
+	background: url(../../img/crossbrowser/browsers.gif) -62px 0 no-repeat;
 	list-style:none;
 	float:left;
 	margin:0 0 0 8px;
@@ -53,7 +53,6 @@
 	height:26px;
 }
 
-
 #crossbrowser .chrome {
 	background-position:-120px 0;
 }
@@ -67,7 +66,6 @@
 	background-position:-177px 0;
 }
 
-
 #crossbrowser .cross_close {
 	position:absolute;
 	top:8px;
@@ -75,6 +73,6 @@
 	display:block;
 	width:14px;
 	height:14px;
-	background:url(/images/crossbrowser/browsers.gif) 0px -34px no-repeat;
+	background:url(../../img/crossbrowser/browsers.gif) 0px -34px no-repeat;
 	text-indent:-9999px;
 }
